# gimad

./: PKG-INFO  pyproject.toml
