[project]
name = "ix-gimad"
version = "0.1.1"
description = "Non-schema database migration tool for PostgreSQL"
authors = [
    { name = "PTNGlobal", email = "support@ptnglobalcorp.com" },
]
dependencies = [
    "psycopg[binary]",
    "typer",
    "pydantic-settings",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
gimad = "gimad:main"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[project.urls]
"Source" = "https://github.com/ptnglobalcorp/gimad"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff",
    "pyright",
    "ward",
]
